--- a/refresh/build.gradle
+++ b/refresh/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -28,12 +29,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    publishing {
-        singleVariant("release")
-        singleVariant("debug")
-    }
 
 }
+
 
 dependencies {
 
@@ -43,3 +41,19 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 }
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication){
+                from components.release
+                groupId = 'com.github.ganxiaofeng123' //your git id
+                artifactId = 'Fuyong1' //your-repository
+                version = '7.0.0' // As same as the Tag
+
+                artifact("$buildDir/outputs/aar/${artifactId}-release.aar") // here is difference, I used `from components...` before
+
+                // use this if you're using third party in your lib
+                }
+            }
+        }
+    }
